fiz bug relove all categories button was being visible in mobile phones

--- a/CSS/filters/filterCategory.css
+++ b/CSS/filters/filterCategory.css
@@ -283,7 +283,7 @@
     font-weight: 800;
     color: aliceblue;
     position: relative;
-    left: -30px;
+    left: -100px;
 }
 
 #remove-all-categories-id {
@@ -296,5 +296,5 @@
     color: aliceblue;
     position: relative;
     margin-left: 20px;
-    left: -120px;
+    left: -200px;
 }
